fix [#36073] Changing list items misses undo push